<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DriveTime</string>
    <string name="action_settings">Settings</string>
    <string name="button_start">Start</string>
    <string name="button_refuel">Refuel</string>
    <string name="title_activity_current_trip">Current Trip</string>
    <string name="start_time">Start Time</string>
    <string name="elapsed_time">Elapsed Time</string>
    <string name="button_pause">Pause</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_finish">End Trip</string>
    <string name="title_activity_new_trip">Start New Trip</string>
    <string name="button_view_logs">View Logs</string>
    <string name="title_activity_view_logs">View Trip Logs</string>
    <string name="button_view_statistics">View Statistics</string>
    <string name="label_car">Car</string>
    <string name="label_logbook">Logbook</string>
    <string name="label_odometer_start">Odometer</string>
    <string name="title_activity_end_trip">EndTrip</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_odometer_end">Odometer End</string>
    <string name="label_time_start">Time started</string>
    <string name="label_time_elapsed">Time elapsed</string>
    <string name="button_done">Done</string>
    <string name="title_activity_refuel">RefuelActivity</string>
    <string name="label_odometer">Odometer</string>
    <string name="label_time">Time</string>
    <string name="label_volume">Volume</string>
    <string name="label_cost">Cost</string>
    <string name="title_activity_statistics">StatisticsActivity</string>
    <string name="label_date">Date</string>
    <string name="title_activity_test">TestActivity</string>

</resources>
