<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CurrentTrip" >
   	<TextView
   	    android:id="@+id/label_start_time"
   	    style="@style/NormalLabelFont"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/start_time" />
   	<TextView
   	    android:id="@+id/text_start_time"
   	    style="@style/NormalLabelFont"
   	    android:layout_below="@id/label_start_time"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="1:00:00" />
   	<TextView
   	    android:id="@+id/label_elapsed_time"
   	    style="@style/NormalLabelFont"
   	    android:layout_alignParentRight="true"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="@string/elapsed_time" />
   	<TextView
   	    android:id="@+id/text_elapsed_time"
   	    style="@style/NormalLabelFont"
   	    android:layout_alignLeft="@id/label_elapsed_time"
   	    android:layout_below="@id/label_elapsed_time"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="0:13:00" />
   	<Button
        android:id="@+id/button_finish"
        android:layout_below="@id/text_start_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_finish"
        android:onClick="buttonFinishClick" />
    <Button
        android:id="@+id/button_cancel"
        android:layout_below="@id/button_finish"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cancel" 
        android:onClick="buttonCancelClick"/>
</RelativeLayout>
