<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/mainImage"
        android:layout_centerHorizontal="true"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/steering_wheel" />
    
    <TextView 
        android:id="@+id/labelTitle" 
        android:text="DriveTime" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="40sp"
        android:layout_below="@id/mainImage"/>
    
    <TextView 
        android:id="@+id/labelSubtitle" 
        android:text="Vehicle log book and expense tracking" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        style="@style/NormalLabelFont"
        android:gravity="center_horizontal"
        android:layout_below="@id/labelTitle"/>
    
    <Button
        android:id="@+id/button_start"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_view_statistics"
        android:text="@string/button_start"
        android:onClick="buttonStartClick" />
    <Button
        android:id="@id/button_view_statistics"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_view_logs"
        android:text="@string/button_view_statistics"
        android:onClick="buttonViewStatisticsClick" />
    <Button
        android:id="@id/button_view_logs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_refuel"
        android:text="@string/button_view_logs"
        android:onClick="buttonViewLogsClick" />
    <Button
        android:id="@id/button_refuel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/button_refuel"
        android:onClick="buttonRefuelClick" />
    
</RelativeLayout>
